Se integra font, y estilos de la parte principal del blog

--- a/angular.json
+++ b/angular.json
@@ -161,7 +161,8 @@
             "aot": true,
             "assets": [
               "projects/blog-stephanie/src/favicon.ico",
-              "projects/blog-stephanie/src/assets"
+              "projects/blog-stephanie/src/assets",
+              "projects/blog-stephanie/src/assets/svg/*"
             ],
             "styles": [
               "projects/blog-stephanie/src/styles.css",
