--- a/projects/blog-stephanie/tsconfig.app.json
+++ b/projects/blog-stephanie/tsconfig.app.json
@@ -2,7 +2,9 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/app",
-    "types": []
+    "types": [
+      "gapi","gapi.auth2"
+    ],
   },
   "files": [
     "src/main.ts",
@@ -10,5 +12,8 @@
   ],
   "include": [
     "src/**/*.d.ts"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "enableIvy": false
+  }
 }
