--- a/package.json
+++ b/package.json
@@ -70,12 +70,17 @@
     "@angular/compiler": "9.0.6",
     "@angular/core": "9.0.6",
     "@angular/forms": "9.0.6",
+    "@angular/localize": "9.0.6",
     "@angular/platform-browser": "9.0.6",
     "@angular/platform-browser-dynamic": "9.0.6",
     "@angular/router": "9.0.6",
     "@auth0/angular-jwt": "^5.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@types/gapi.auth2": "0.0.52",
     "angularx-social-login": "^3.2.0",
+    "bootstrap": "^4.4.0",
     "chart.js": "2.8.0",
     "core-js": "3.2.1",
     "jw-bootstrap-switch-ng2": "2.0.5",
